# haskell-examples

./: .gitignore  Makefile  README.md  haskell-examples.cabal
src/executables/: getopt.hs  hello.hs  monad-law.hs  mplus-law.hs  return.hs  rpn.hs  stack.hs  todo.hs  yesno.hs
src/hofunc/: chiper.hs  composition.hs  filter.hs  fizzbuzz.hs  fold.hs  lambda.hs  map.hs  scan.hs
src/modules/: Day.hs  HTML.hs  Main.hs  Person.hs  Shapes.hs  Vector.hs
src/modules/Example/: Applicative.hs  ApplicativeFunctor.hs  Calc.hs  Day.hs  Dice.hs  HTML.hs  HigherOrderFunction.hs  Kinship.hs  Monad.hs  MonadPlus.hs  Monoid.hs  Parser.hs  Person.hs  Poker.hs  Recursion.hs  Road.hs  Setting.hs  Shapes.hs  Sheep.hs  State.hs  Tree.hs  Validator.hs  Vector.hs  Writer.hs
src/recursion/: collatz.hs  drop.hs  exists.hs  lookup.hs  maximum.hs  quicksort.hs  repeat.hs  replicate.hs  reverse.hs  take.hs  unique.hs  zip.hs
test/: doctests.hs
