Name: haskell-examples
Version:             0.0
Description:         Haskell Examples
License:             MIT
License-file:        LICENSE
Author:              Takeshi Matsuoka
Maintainer:          tachesimazzoca@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Build-Depends:     base >= 3 && < 5
  Exposed-modules:   Example.Day
                   , Example.Vector
                   , Example.Person
                   , Example.Shapes
                   , Example.HTML
                   , Example.Validator
                   , Example.Tree
                   , Example.Setting
                   , Example.Recursion
                   , Example.HigherOrderFunction
                   , Example.Road
                   , Example.ApplicativeFunctor
                   , Example.Monoid
  Ghc-Options:       -Wall
  Hs-Source-Dirs:    src/modules

Test-Suite doctest
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Ghc-Options:       -threaded -Wall
  Main-Is:           doctests.hs
  Build-Depends:     base
                   , doctest >= 0.9.3
