Name: haskell-examples
Version:             0.0
Description:         Haskell Examples
License:             MIT
License-file:        LICENSE
Author:              Takeshi Matsuoka
Maintainer:          tachesimazzoca@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10

Library
  Default-Language:  Haskell2010
  Ghc-Options:       -Wall
  Build-Depends:     base >= 4 && < 5
                   , mtl >= 2.1.2
                   , random >= 1.0.0.3
                   , containers >= 0.5.0.0
  Exposed-modules:   Example.Day
                   , Example.Vector
                   , Example.Person
                   , Example.Shapes
                   , Example.HTML
                   , Example.Validator
                   , Example.Tree
                   , Example.Setting
                   , Example.Recursion
                   , Example.HigherOrderFunction
                   , Example.Road
                   , Example.Applicative
                   , Example.Monoid
                   , Example.Monad
                   , Example.MonadPlus
                   , Example.Writer
                   , Example.State
                   , Example.Dice
                   , Example.Sheep
                   , Example.Calc
                   , Example.Kinship
                   , Example.Parser
  Hs-Source-Dirs:    src/modules

Test-Suite doctest
  Type:              exitcode-stdio-1.0
  Default-Language:  Haskell2010
  HS-Source-Dirs:    test
  Ghc-Options:       -threaded -Wall
  Main-Is:           doctests.hs
  Build-Depends:     base
                   , doctest >= 0.9.3
